Added the CNF.  Working on hiding editors from perspectives.

--- a/trunk/build.properties
+++ b/trunk/build.properties
@@ -6,5 +6,10 @@ bin.includes = plugin.xml,\
                lib/,\
                META-INF/,\
                splash.bmp,\
-               bin/
+               bin/,\
+               RB-128.gif,\
+               RB-16.gif,\
+               RB-32.gif,\
+               RB-48.gif,\
+               RB-64.gif
 source.. = src
