--- a/trunk/build.properties
+++ b/trunk/build.properties
@@ -7,10 +7,10 @@ bin.includes = plugin.xml,\
                META-INF/,\
                splash.bmp,\
                bin/,\
-               RB-128.gif,\
-               RB-16.gif,\
-               RB-32.gif,\
-               RB-48.gif,\
-               RB-64.gif,\
+               icons/system/RB-128.gif,\
+               icons/system/RB-16.gif,\
+               icons/system/RB-32.gif,\
+               icons/system/RB-48.gif,\
+               icons/system/RB-64.gif,\
                lib/BNGParser.jar
 source.. = src
