--- a/trunk/plugin.xml
+++ b/trunk/plugin.xml
@@ -73,6 +73,12 @@
                relative="org.eclipse.ui.editorss"
                visible="true">
          </view>
+         <view
+               id="rulebender.example.exampleview"
+               minimized="false"
+               relationship="stack"
+               relative="rulebender.contactmap.view.ContactMapView">
+         </view>
       </perspectiveExtension>
       <perspectiveExtension
             targetID="rulebender.ResultsPerspective">
@@ -443,7 +449,7 @@
          </property>
          <property
                name="aboutText"
-               value="RuleBender 2.0r70&#x0A;&#x0A;RuleBender is currently developed by Adam M. Smith at the University of Pittsburgh under the direction of James R. Faeder and Elisabeta G. Marai. &#x0A;&#x0A;Please send all feedback and questions to help@rulebender.org.">
+               value="RuleBender 2.0r220&#x0A;&#x0A;RuleBender is currently developed by Adam M. Smith at the University of Pittsburgh under the direction of James R. Faeder and Elisabeta G. Marai. &#x0A;&#x0A;Please send all feedback and questions to help@rulebender.org.">
          </property>
          <property
                name="windowImages"
